--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yiyang (Daphne) Zhang
-description: A template for your AOS C111/204 project site.
+description: AOS C111/204 project site.
 logo: /assets/IMG/template_logo.png
 show_downloads: true
 theme: jekyll-theme-modernist
